tests/ui/trivial-bounds/not-trivial-after-norm-1.next.stderr
error[E0283]: type annotations needed
  --> $DIR/not-trivial-after-norm-1.rs:28:5
   |
LL |     impls_incomplete::<(), _>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `U` declared on the function `impls_incomplete`
   |
note: multiple `impl`s or `where` clauses satisfying `(): Incomplete<_>` found
  --> $DIR/not-trivial-after-norm-1.rs:14:1
   |
LL | impl<T> Incomplete<T> for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     (): Incomplete<<u32 as With>::Assoc>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `impls_incomplete`
  --> $DIR/not-trivial-after-norm-1.rs:15:24
   |
LL | fn impls_incomplete<T: Incomplete<U>, U>() {}
   |                        ^^^^^^^^^^^^^ required by this bound in `impls_incomplete`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
